--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
     <title>Flex</title>
 </head>
 <body>
+
+    <div class="flex-container">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+
+
+    </div>
     
 </body>
 </html>
