more flex examples,almost there :)

--- a/main.html
+++ b/main.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+    <div class="input">
+        <button></button>
+        <input type="text">
+        <button>search</button>
+    </div>
+
     
     <div class="flex-containerTwo">
         <div class="one">1</div>
